Added Seleniume Grid feature and Edge compatibility